--- a/page3.html
+++ b/page3.html
@@ -51,21 +51,21 @@
                         Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="page8.html">
+                    <a class="nav-link link text-black display-4" href="http://about.barrettins.com">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">
-                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">
-                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://products.barrettins.com">
+                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://media.barrettins.com">
+                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://community.barrettins.com">
+                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://reviews.barrettins.com">
+                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://contact.barrettins.com">
                         Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
