--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/b-logo-128x128.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Barrett Insurance - Home</title>
+  <title>Barrett Insurance | Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -277,8 +277,8 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="http://joe.barrettins.com"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp; E-mail Joe &nbsp;&nbsp;</a>
-                     <a class="btn btn-primary display-4" href="http://ben.barrettins.com"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp; E-mail Ben &nbsp;&nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="joe.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp; E-mail Joe &nbsp;&nbsp;</a>
+                     <a class="btn btn-primary display-4" href="ben.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp; E-mail Ben &nbsp;&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -331,7 +331,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Jefxmel0lTTee9TBxkhxM0IXO3ihdkM12gRKS/s4Gzoy9JVFeIFoo6SUWozlwifkIDeg6XxUqEd3s3KNFTT82scY9EjJ5VP0p/HQOKmrGKJ+8mLWQhqZ83hCET4nBXeK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E9HFhPopQ9y9+jO2cHLX/DhBTMKhdzVBnpwiisv1AEuk8CnRJ7C7z0H+8sgkDkfGxtUR7FMd/FundgKq15H5XgXxIWEpA1iLE8HLNmxSYkblgdCNc+I18L8nDri+I+Fj">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
