--- a/becky.html
+++ b/becky.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uAHfqqiuqwCpk0Mu4+bOWXIgxepIwSb4qktTxmpt18CAyLhlUbWQQ/yD8UZr0rFsqglm7J5vf9OtsLc0047f9+ss6IdTeytMEE3/GvGZImWqW6Sd5DA3VndHpSqPx8CB">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fABGJuzdgPSR6Ls/+ntEHkUKfI9nXaVXVyPC3k/MHTTpuYo2s9DnigwrOi0STADUWMRJc4H6Z/8X7umjDMjCWzSA4S4mij3rNOrOM41KqnjCGpZj0jhJmdPPlN0c3J+/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
